--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "login-system",
   "version": "1.0.0",
-  "main": "src/server.js",
+  "private": true,
+  "engines": {
+    "node": ">=18"
+  },
   "scripts": {
-    "start": "node src/server.js"
+    "start": "node socket-server.mjs"
   },
   "dependencies": {
-    "bcrypt": "^5.1.0",
-    "dotenv": "^16.4.0",
-    "express": "^4.19.0",
-    "jsonwebtoken": "^9.0.2",
-    "mysql2": "^3.9.0"
+    "socket.io": "^4.7.5",
+    "redis": "^4.6.12"
   }
 }
